--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="login-area">
-        <h1 class="text-center pt-5 mt-5">Welcome To Mr. Banik Bank</h1>
+        <h1 class="text-center pt-5 mt-5">Welcome To Khan's Bank</h1>
         <div class="submit-area container mt-5">
             <h4>Login</h4>
             <input type="email" placeholder="email" class="form-control" required>
